@@ -5,7 +5,7 @@ package WIP.mame;
 
 import static WIP.arcadeflex.fucPtr.*;
 import static WIP.arcadeflex.libc_v2.*;
-import static WIP.arcadeflex.libc.memset.*;
+import static common.libc.cstring.*;
 import java.util.Arrays;
 import static WIP.mame.mame.Machine;
 import static old.mame.driverH.MAX_CPU;
