@@ -18,11 +18,10 @@ import static WIP2.arcadeflex.libc.cstring.*;
 import static WIP.mame.osdependH.*;
 import static WIP2.mame.commonH.*;
 import static old.mame.common.*;
-import static WIP.arcadeflex.libc.memcpy.*;
 import static WIP.mame.memoryH.*;
 import static old.arcadeflex.libc_old.SEEK_SET;
 import static old.arcadeflex.libc_old.printf;
-import static WIP.arcadeflex.libc.memcpy.*;
+import static common.libc.cstring.*;
 import static old.arcadeflex.libc_old.strcmp;
 import static WIP2.mess.includes.nesH.*;
 import static WIP2.mess.systems.nes.*;
