@@ -8,11 +8,10 @@ import static WIP.arcadeflex.fucPtr.*;
 import static WIP.arcadeflex.libc_v2.*;
 import WIP.mame.osdependH.mame_bitmap;
 import static old.arcadeflex.osdepend.logerror;
-import static WIP.arcadeflex.libc.memcpy.*;
+import static common.libc.cstring.*;
 import static WIP.mame.common.bitmap_alloc;
 import static WIP.mame.mame.Machine;
 import static old.arcadeflex.video.osd_free_bitmap;
-import static WIP2.arcadeflex.libc.cstring.*;
 import static WIP2.mess.vidhrdw.tms9928aH.TMS99x8A;
 import static old.arcadeflex.video.osd_skip_this_frame;
 import static old.mame.drawgfx.*;
