@@ -1,0 +1,123 @@
+package common.libc;
+
+import WIP.arcadeflex.libc_v2.UBytePtr;
+
+
+
+/**
+ *
+ * @author shadow
+ */
+public class cstring {
+
+    /**
+     * Get string length
+     *
+     * @param str
+     * @return
+     */
+    public static int strlen(String str) {
+        return str.length();
+    }
+
+    /**
+     * memset
+     *
+     * @param dst
+     * @param value
+     * @param size
+     */
+    public static void memset(char[] dst, int value, int size) {
+        for (int mem = 0; mem < size; mem++) {
+            dst[mem] = (char) value;
+        }
+    }
+
+    public static void memset(short[] dst, int value, int size) {
+        for (int mem = 0; mem < size; mem++) {
+            dst[mem] = (short) value;
+        }
+    }
+
+    public static void memset(int[] dst, int value, int size) {
+        for (int mem = 0; mem < size; mem++) {
+            dst[mem] = value;
+        }
+    }
+
+    public static void memset(UBytePtr ptr, int value, int length) {
+        for (int i = 0; i < length; i++) {
+            ptr.write(i, value);
+        }
+    }
+
+    public static void memset(UBytePtr ptr, int offset, int value, int length) {
+        for (int i = 0; i < length; i++) {
+            ptr.write(i + offset, value);
+        }
+    }
+
+    /**
+     * memcpy
+     */
+    public static void memcpy(UBytePtr dst, int dstoffs, UBytePtr src, int srcoffs, int size) {
+        for (int i = 0; i < Math.min(size, src.memory.length); i++) {
+            dst.write(i + dstoffs, src.read(i + srcoffs));
+        }
+    }
+
+    public static void memcpy(UBytePtr dst, int dstoffs, UBytePtr src, int size) {
+        for (int i = 0; i < Math.min(size, src.memory.length); i++) {
+            dst.write(i + dstoffs, src.read(i));
+        }
+    }
+
+    public static void memcpy(UBytePtr dst, UBytePtr src, int srcoffs, int size) {
+        for (int i = 0; i < Math.min(size, src.memory.length); i++) {
+            dst.write(i, src.read(i + srcoffs));
+        }
+    }
+
+    public static void memcpy(UBytePtr dst, UBytePtr src, int size) {
+        for (int i = 0; i < Math.min(size, src.memory.length); i++) {
+            dst.write(i, src.read(i));
+        }
+    }
+
+    public static void memcpy(UBytePtr dst, int dstoffs, int[] src, int size) {
+        for (int i = 0; i < Math.min(size, src.length); i++) {
+            dst.write(i + dstoffs, src[i]);
+        }
+    }
+    
+    public static void memcpy(UBytePtr dst, int dstoffs, char[] src, int size) {
+        for (int i = 0; i < Math.min(size, src.length); i++) {
+            dst.write(i + dstoffs, src[i]);
+        }
+    }
+
+    public static void memcpy(UBytePtr dst, char[] src, int size) {
+        for (int i = 0; i < Math.min(size, src.length); i++) {
+            dst.write(i, src[i]);
+        }
+    }
+
+    public static void memcpy(char[] dst, char[] src, int size) {
+        for (int i = 0; i < Math.min(size, src.length); i++) {
+            dst[i] = src[i];
+        }
+    }
+
+    /**
+     * memcmp
+     */
+    public static int memcmp(char[] dst, char[] src, int size) {
+        for (int i = 0; i < size; i++) {
+            if (dst[i] != src[i]) {
+                return -1;
+
+            }
+        }
+        return 0;
+    }
+}
