@@ -6,7 +6,7 @@ import java.awt.event.*;
 
 import static old.arcadeflex.blit.back_buffer;
 import static old.arcadeflex.blit.palette_16bit_lookup;
-import static WIP.arcadeflex.libc.memset.*;
+import static common.libc.cstring.*;
 import static old.arcadeflex.libc_old.printf;
 import static old.arcadeflex.osdepend.logerror;
 import static WIP.arcadeflex.libc_v2.UBytePtr;
